# smesh-geom

./: CMakeLists.txt
src/GEOMUtils/: GEOMUtils.cxx
